SELECT Popup: Fix the right popup padding in RTL.

LayoutMenuList::clientPaddingRight wasn't RTL-aware. The function is not
used in LTR case, so we can remove the conditional code.

BUG=605719

Review-Url: https://codereview.chromium.org/2003433002
Cr-Commit-Position: refs/heads/master@{#395013}

Former-commit-id: 35cc4a9bb84d3fd2dfb11bc9b4cec60c7a22457f