third_party/WebKit/Source/core/layout/LayoutMenuList.cpp
@@ -347,19 +347,8 @@ LayoutUnit LayoutMenuList::clientPaddingLeft() const
     return paddingLeft() + m_innerBlock->paddingLeft();
 }
 
-const int endOfLinePadding = 2;
 LayoutUnit LayoutMenuList::clientPaddingRight() const
 {
-    if (style()->appearance() == MenulistPart || style()->appearance() == MenulistButtonPart) {
-        // For these appearance values, the theme applies padding to leave room for the
-        // drop-down button. But leaving room for the button inside the popup menu itself
-        // looks strange, so we return a small default padding to avoid having a large empty
-        // space appear on the side of the popup menu.
-        return LayoutUnit(endOfLinePadding);
-    }
-
-    // If the appearance isn't MenulistPart, then the select is styled (non-native), so
-    // we want to return the user specified padding.
     return paddingRight() + m_innerBlock->paddingRight();
 }
 
